# ceres_and_g2o_tutorials

./: CMakeLists.txt  README.md
include/: bal_problem.h  snavely_reproject_error.h
src/: bundle_adjuster.cpp  curve_fitting.cpp  find_min.cpp
